# tasky

./: .gitignore  AGENTS.md  Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agents/skills/docs/: SKILL.md
.agents/skills/plan/: PLAN.md  SKILL.md
.agents/skills/plan/phases/: phase-1-foundation.md  phase-4-caldav-sync.md
.agents/skills/planning/: PLAN.md  PROGRESS.md  SKILL.md
.agents/skills/planning/phases/: phase-3-views.md  phase-4-caldav-sync.md  phase-6-provider-abstraction.md  phase-7-mobile-responsive.md  phase-8-recurrence.md
.agents/skills/project-map/: SKILL.md  backend.md  conventions.md  data-model.md  database.md  frontend.md  stores.md
.agents/skills/project-map/scripts/: tree.js  tree.sh
.github/workflows/: build-macos.yml  deploy-pages.yml  update-manifest.yml
.opencode/commands/: release.md
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  providers.rs
apps/desktop/src-tauri/src/caldav/: ical.rs  mod.rs  sync.rs
apps/desktop/src-tauri/src/providers/caldav/: mod.rs
apps/desktop/src/components/: app-provider.tsx  theme-provider.tsx
apps/desktop/src/components/layout/: app-shell.tsx  details-panel.tsx  sidebar.tsx  view-header.tsx
apps/desktop/src/components/modals/: list-modal.tsx  task-modal.tsx
apps/desktop/src/components/task/: quick-add.tsx  recurrence-editor.tsx  tag-input.tsx  task-context-menu.tsx  task-item.tsx
apps/desktop/src/lib/: database.ts  utils.ts
apps/desktop/src/providers/: ipc.ts
apps/desktop/src/stores/: events.ts  index.ts  lists.ts  sync.ts  tasks.ts  ui.ts
apps/desktop/src/views/calendar/: event-detail-popover.tsx  index.tsx
apps/desktop/src/views/inbox/: index.tsx
apps/desktop/src/views/list/: index.tsx
apps/desktop/src/views/planner/: index.tsx
apps/desktop/src/views/search/: index.tsx
apps/desktop/src/views/settings/: index.tsx
apps/desktop/src/views/today/: index.tsx
docs/: astro.config.mjs  getting-started.md  keyboard-shortcuts.md  package.json  pnpm-lock.yaml  settings.md  sync.md  tailwind.config.mjs  task-management.md  views.md
docs/src/components/: Download.astro  Features.astro  Footer.astro  Hero.astro
docs/src/layouts/: DocLayout.astro  Layout.astro
docs/src/pages/: getting-started.md  index.astro  keyboard-shortcuts.md  settings.md  sync.md  task-management.md  views.md
plan/: PLAN.md  PROGRESS.md
plan/phases/: phase-2-core-tasks.md  phase-3-views.md  phase-4-caldav-sync.md  phase-5-polish.md
providers/: Cargo.toml
providers/src/: lib.rs
providers/src/caldav/: ical.rs  mod.rs
providers/src/github/: mod.rs
scripts/: generate-signing-cert.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.prerelease.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  providers.rs
src-tauri/src/app_sync/: bundle.rs  crypto.rs  db.rs  mod.rs  transport.rs
src/components/: app-provider.tsx
src/components/layout/: app-shell.tsx  bottom-nav.tsx  bottom-sheet.tsx  details-panel.tsx  index.ts  modal-sheet.tsx  more-sheet.tsx  sidebar.tsx
src/components/modals/: confirm-dialog.tsx  list-modal.tsx  search-modal.tsx  task-modal.tsx  update-modal.tsx
src/components/task/: recurrence-editor.tsx  task-context-menu.tsx  task-item.tsx
src/components/ui/: color-picker.tsx  fab.tsx
src/db/: migrate.ts  repository.ts
src/db/migrations/: index.ts
src/hooks/: use-auto-sync.ts  use-is-mobile.ts  use-long-press.ts
src/lib/: database.ts  recurrence.test.ts  recurrence.ts
src/providers/: ipc.ts  types.ts
src/stores/: app-sync.ts  events.ts  index.ts  lists.ts  sync.ts  tasks.ts  ui.ts
src/types/: types.ts
src/views/calendar/: event-detail-popover.tsx  index.tsx
src/views/inbox/: index.tsx
src/views/list/: index.tsx
src/views/planner/: index.tsx
src/views/search/: index.tsx
src/views/settings/: app-sync-section.tsx  index.tsx  provider-icon.tsx  source-config-form.tsx  source-settings-inline.tsx
src/views/today/: index.tsx
