[package]
name = "tasky"
version = "0.0.1"
description = "Tasky - Task Manager"
authors = ["Tasky"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "tasky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tasky"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-notification = { version = "2.0" }
tauri-plugin-updater = { version = "2.0" }
tauri-plugin-process = { version = "2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libdav = "0.10"
icalendar = { version = "0.17", features = ["parser"] }
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "native-tokio", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["auth"] }
http = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tasky-providers = { path = "../providers" }
# App Sync dependencies
rusqlite = "0.31"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
keyring = "3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
