[package]
name = "tasky"
version = "0.0.1"
description = "Tasky - Task Manager"
authors = ["Tasky"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "tasky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tasky"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-notification = { version = "2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
